doc: Adds login endpoint documentation
